# XJTU-RMV-Task06

./: README.md
src/board_detection/: CMakeLists.txt  package.xml
src/board_detection/config/: detection.rviz  params.yaml
src/board_detection/launch/: display.launch.py
src/board_detection/src/: main.cpp
